# todo-app

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml  depoloy.yml
backend/: .dockerignore  config.py  database.py  exception_handler.py  main.py  pyproject.toml
backend/alembic/versions/: 7271219fd341_create_initial_table.py  d29733786f05_initial_schema.py  f5f2c0c5510c_edit_order_column_name.py
backend/batch/: cleanup_tokens.py
backend/container/fastapi/: Dockerfile
backend/exceptions/: app_exception.py
backend/models/: models.py
backend/repository/: repository.py  tasks_repository.py  todo_repository.py
backend/routers/: auth.py  daily-tasks.py  daily_tasks.py  goal-tasks.py  goal.py  goal_tasks.py  tasks.py  todos.py  top.py  users.py
backend/schemas/: schemas.py
backend/test/: test_setup.py
backend/test/integration/api/: test_auth.py  test_goal.py  test_goal_tasks.py  test_top.py  test_user.py
backend/test/integration/models/: test_base.py  test_goal_tasks.py  test_goals.py  test_user.py
backend/test/integration/repository/: test_goal_tasks.py  test_goals.py  test_tokens.py  test_user.py
backend/test/unit/models/: test_goal_tasks.py  test_goals.py  test_tokens.py  test_user.py
backend/test/unit/schemas/: test_goal_tasks.py  test_goals.py  test_user.py
backend/utils/: add_month.py  auth_helpers.py  email_helpers.py  generate_secure_string.py  parse.py  validation_helpers.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: index.css  main.tsx
(+129 files in other folders)
